--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+    <!-- iPhone ears -->
+    <meta name="viewport" content="width=device-width. initial-scale=1.0, viewport-fit=cover"> 
     <meta name="description" content="">
     <meta name="author" content="">
 
